<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/campi"
    >
<ScrollView
    android:layout_height="wrap_content" 
	android:layout_width="fill_parent" >
	
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
		>
        <TextView
            android:id="@+id/title1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/labelTitle"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/labelName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/labelName"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/fieldName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/labelFieldName"
            android:inputType="textPersonName"
            android:paddingBottom="10dp"
            android:width="250dp" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/labelSurname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/labelSurname"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/fieldSurname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/labelFieldSurname"
            android:inputType="textPersonName"
            android:paddingBottom="10dp"
            android:width="250dp" />

        <TextView
            android:id="@+id/labelAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/labelAge"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/fieldAge"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:width="70dp" />

        <TextView
            android:id="@+id/labelNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/labelNumber"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/fieldNumber"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/labelFieldNumber"
                android:inputType="phone" />

            <ImageButton
                android:id="@+id/infoButton"
                android:layout_width="30dp"
                android:layout_height="32dp"
                android:background="@drawable/info" />
        </LinearLayout>

        <Button
            android:id="@+id/continueButton"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/labelButton"
            android:textSize="20dp" />
    </LinearLayout>
</ScrollView>
</LinearLayout>